--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Journey</title>
     
     <!-- Estilos personalizados -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="img/journey-icon.png">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="img/journey-logo.png" alt="" id="imagenInicio">
+    <img src="../img/journey-logo.png" alt="imagen Logo" id="imagenInicio">
 
     <section class="contenedor login" id="sectionFormulario">
         <h2 class="heading__login">¡Hola de nuevo!</h2>
@@ -22,20 +22,20 @@
         <form class="formulario__login" id="formularioLogin">
             <h1 class="heading__formulario">Iniciar Sesión</h1>
 
-            <input type="text" class="input__formulario" placeholder="Nombre de Usuario">
-            <input type="password" class="input__formulario" placeholder="Contraseña">
+            <input type="text" class="input__formulario" placeholder="Nombre de Usuario" id="inputUsuario">
+            <input type="password" class="input__formulario" placeholder="Contraseña" id="inputPassword">
             <input type="submit" class="submit__formulario" value="Iniciar Sesión" id="submitLogin">
 
-            <a href="acciones.html" class="enlace__formulario">¿Olvidaste tu contraseña?</a>
+            <a href="recuperar.html" class="enlace__formulario">¿Olvidaste tu contraseña?</a>
         </form>
 
         <div class="imagen__login">
-            <img src="img/journey-logo.png" alt="Logo Journey" class="journey__imagen">
+            <img src="../img/journey-logo.png" alt="Logo Journey" class="journey__imagen">
         </div>
     </section>
 
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/app.js"></script>
+    <script src="js/appLogin.js"></script>
 </body>
 </html>
