--- a/plantilla.html
+++ b/plantilla.html
@@ -6,7 +6,7 @@
     <title>Journey</title>
     
     <!-- Estilos personalizados -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/journey-icon.png">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +19,5 @@
     
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/appLogin.js"></script>
 </body>
 </html>
